--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -40,7 +40,7 @@ compiling Forward.cpp...
   #define P_MODE 1
 .\src\Vec2b\Vec2b.h(24): warning:  #1-D: last line of file ends without a newline
   #endif /* VEC2B_H_ */
-.\src\Processing_coord\Processing_coord.h(62): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(60): warning:  #1-D: last line of file ends without a newline
   };
 src\Forward\Forward.h(101): warning:  #1-D: last line of file ends without a newline
   };
@@ -58,28 +58,182 @@ src\Forward\Forward.cpp(67): warning:  #111-D: statement is unreachable
   			break;
 src\Forward\Forward.cpp(70): warning:  #111-D: statement is unreachable
   			break;
-src\Forward\Forward.cpp(108): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(110): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	float ang = atan2(float(y), float(x)) * RAD2DEG;
-src\Forward\Forward.cpp(113): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(115): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	float ang = atan2(float(DIST_BETWEEN_GOALS - y), float(x)) * RAD2DEG;
-src\Forward\Forward.cpp(119): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(121): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(146): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(148): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	int16_t angGoal = RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(_x));
-src\Forward\Forward.cpp(153): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(155): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(160): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(162): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(167): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(169): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	int16_t angGoal = RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(_x));
-src\Forward\Forward.cpp(182): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+src\Forward\Forward.cpp(184): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
-src\Forward\Forward.cpp(232): warning:  #1-D: last line of file ends without a newline
+src\Forward\Forward.cpp(234): warning:  #1-D: last line of file ends without a newline
   }
 src\Forward\Forward.cpp: 24 warnings, 0 errors
+compiling main.cpp...
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
+  #endif /* PIN_H_ */
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart1\usart1.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart2\usart2.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart3\usart3.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart6\usart6.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usable\usable.h(36): warning:  #1-D: last line of file ends without a newline
+  #endif /* USABLE_H_ */
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\adc\adc.h(25): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\dma\dma.h(19): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Motor\Motor.h(16): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_1\SPI_1.h(34): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\omniplatform\omniplatform.h(17): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IMU_USART\IMU_USART.h(42): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\OpenMV\OpenMV.h(9): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\omniplatform\omniplatform.h")
+  #define RAD2DEG	57.2957795130823208767f
+.\src\OpenMV\OpenMV.h(10): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\omniplatform\omniplatform.h")
+  #define DEG2RAD	0.017453292519943295769f
+.\src\OpenMV\OpenMV.h(38): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\TSOP\TSOP.h(7): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 10 of ".\src\OpenMV\OpenMV.h")
+  #define DEG2RAD	0.01745329251994329576f
+.\src\TSOP\TSOP.h(31): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\I2C\I2C.h(28): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IR_Locator\IR_Locator.h(25): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Vec2b\Vec2b.h(8): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\TSOP\TSOP.h")
+  #define RAD2DEG	57.2957795130823208767
+.\src\Vec2b\Vec2b.h(9): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\TSOP\TSOP.h")
+  #define DEG2RAD	0.01745329251994329576
+.\src\Vec2b\Vec2b.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+.\src\Queues_ball\Queues_ball.h(67): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Processing_coord\Processing_coord.h(60): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Forward\Forward.h(101): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Goalkeeper\Goalkeeper.h(60): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\flash\flash.h(16): warning:  #111-D: statement is unreachable
+    FLASH_Lock();
+.\src\flash\flash.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Voltage\Voltage.h(18): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Button\Button.h(24): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\libraries.h(34): warning:  #1-D: last line of file ends without a newline
+  #include "BallSensor.h"
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\BallSensor\BallSensor.h(21): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\Robot\Robot.h(263): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			} else if (dist > 9.17 && abs(ang) > 25) speedForward *= 0.9;
+.\src\Robot\Robot.h(276): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		if (ballGrip || (abs(ang) <= 15 && dist > 9.2)) { 
+.\src\Robot\Robot.h(285): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		if (!(ballGrip || dist > 7.9 && abs(ang) <= 25)) {
+.\src\Robot\Robot.h(340): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				float angGoal = RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - y), float(x));
+.\src\Robot\Robot.h(391): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		int16_t angGoal = RAD2DEG * atan2(float(y), float(x));
+.\src\Robot\Robot.h(430): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
+.\src\Robot\Robot.h(589): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp(37): warning:  #111-D: statement is unreachable
+  	return 0;
+src\main\main.cpp(38): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp: 76 warnings, 0 errors
 linking...
-Program Size: Code=52410 RO-data=1426 RW-data=440 ZI-data=16088  
-".\Objects\Lightweight.axf" - 0 Error(s), 24 Warning(s).
+Program Size: Code=52754 RO-data=1426 RW-data=440 ZI-data=16088  
+".\Objects\Lightweight.axf" - 0 Error(s), 100 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -110,7 +264,7 @@ Package Vendor: Keil
       Source file:   MDK\Device\Source\ARM\STM32F40xxx_41xxx_OPT.s
       Source file:   MDK\Device\Source\ARM\STM32F4xx_OTP.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
